refactoriazacion de seccionone

--- a/app/index.html
+++ b/app/index.html
@@ -45,64 +45,25 @@
               <img class="header_imagen" src="/images/image_header.png">
       </div>
 
-      <div class="table_container">
-        <div class="table_uno">
-          <p>MEJOR PROBAR ANTES ¿NO?</p>
+      <div class="seccionone">
+        <div class="seccionone_left">
+          <p class="seccionone_tittle">MEJOR PROBAR ANTES ¿NO?</p>
           <p>¿Quieres utilizar coSfera como tu espacio de trabajo? Si tienes dudas de qué tarifa escoger, escríbenos y te invitamos a que pruebes una semana el espacio antes de decidirte.</p>
+           <div class="seccionone_right_button"><p>CONECTA</p></div>
         </div>
-        <div class="table_dos">
-          <p>TAL VEZ VIENES ACOMPAÑADO...</p>
+        <div class="seccionone_center">
+          <p class="seccionone_tittle">TAL VEZ VIENES ACOMPAÑADO...</p>
           <p>Si te interesa alquilar nuestras salas de reuniones, puedes comprobar aquí la disponibilidad y reservar la sala por el tiempo que necesites.</p>
+          <div class="seccionone_left_button"><p>CONECTA</p></div>
         </div>
-        <div class="table_tres">
-          <p>CONECTA CON LA COMUNIDAD COSFÉRICA</p>
+        <div class="seccionone_right">
+          <p class="seccionone_tittle">CONECTA CON LA COMUNIDAD COSFÉRICA</p>
           <p>Si solamente quieres estar en contacto con la comunidad, elige la tarifa Conecta y tendrás acceso a la comunidad coSférica.</p>
+           <div class="seccionone_left_button"><p>CONECTA</p></div>
         </div>
       </div>
 
 
-
-
-
-
-
-
-
-
-      <div class="seccionone">
-
-         <div class="seccionone_left">
-            
-            <div class="seccionone_left_title">MEJOR PROBAR ANTES ¿NO?</div>
-            <div class="seccionone_left_description">
-              ¿Quieres utilizar coSfera como tu espacio de trabajo? Si tienes dudas de qué tarifa escoger, escríbenos y te invitamos a que pruebes una semana el espacio antes de decidirte.
-            </div>
-            <div class="seccionone_left_button">TARIFAS</div>
-
-         </div>
-        
-         <div class="seccionone_right">
-
-          <div class="seccionone_right_title">CONECTA CON LA COMUNIDAD COSFÉRICA</div>
-            <div class="seccionone_right_description">
-              Si solamente quieres estar en contacto con la comunidad, elige la tarifa Conecta y tendrás acceso a la comunidad coSférica.
-            </div>
-            <div class="seccionone_right_button">CONECTA</div>
-
-         </div>
-
-
-         <div class="seccionone_right_title">
-              TAL VEZ VIENES ACOMPAÑADO...
-            </div>
-
-            <div class="seccionone_right_description">
-              Si te interesa alquilar nuestras salas de reuniones, puedes comprobar aquí la disponibilidad y reservar la sala por el tiempo que necesites.
-            </div>
-
-            <div class="seccionone_right_button">RESERVA SALA</div>
-
-         </div>
 
 
 
